methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:3: error: type red is not a member of object java.awt.Color
  FaireMotif(c: Color.red)
                      ^FlowerPot:3: error: not found: value c
  FaireMotif(c: Color.red)
             ^