methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  for(j <-0 to 3)
  FaireMotif(c: Color.red)
  
  
}

def Marquer(){
  baisseBrosse()
  leveBrosse()
}

def FaireMotif(c: Color){
  avance()
  setCouleurBrosse(Color.yellow)
  Marquer()
  recule()
  droite()
  setCouleurBrosse(c: Color)
  avance()
  gauche()
  for(i<-0 to 3){
    avance() 
  	Marquer()
  	avance()
  	gauche()
  } 
}